Added CVS ID line

--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -1,5 +1,6 @@
 %-------------------------------------------------------------------------
 % Common document formatting and macros for GLFW manuals
+% $Id: glfwdoc.sty,v 1.2 2003-11-03 21:29:52 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Misc. document info
