--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -1,6 +1,6 @@
 %-------------------------------------------------------------------------
 % Common document formatting and macros for GLFW manuals
-% $Id: glfwdoc.sty,v 1.2 2003-11-03 21:29:52 marcus256 Exp $
+% $Id: glfwdoc.sty,v 1.3 2003-11-04 21:54:17 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Misc. document info
@@ -64,10 +64,10 @@
 \newenvironment{mysamepage}[1][2]{\begin{samepage}\needspace{#1\baselineskip}}{\end{samepage}}
 
 % Macros for automating function reference entries
-\newenvironment{refparameters}[1][0]{\begin{mysamepage}\textbf{Parameters}\\}{\end{mysamepage}}
-\newenvironment{refreturn}[1][0]{\begin{mysamepage}\textbf{Return values}\\}{\end{mysamepage}}
-\newenvironment{refdescription}[1][0]{\begin{mysamepage}\textbf{Description}\\}{\end{mysamepage}}
-\newenvironment{refnotes}[1][0]{\begin{mysamepage}\textbf{Notes}\\}{\end{mysamepage}}
+\newenvironment{refparameters}[1][0]{\begin{mysamepage}\textbf{Parameters}\\}{\end{mysamepage}\bigskip}
+\newenvironment{refreturn}[1][0]{\begin{mysamepage}\textbf{Return values}\\}{\end{mysamepage}\bigskip}
+\newenvironment{refdescription}[1][0]{\begin{mysamepage}\textbf{Description}\\}{\end{mysamepage}\bigskip}
+\newenvironment{refnotes}[1][0]{\begin{mysamepage}\textbf{Notes}\\}{\end{mysamepage}\bigskip}
 
 % hyperref (bookmarks, links etc) - use this package last
 \usepackage[colorlinks=true,linkcolor=black,bookmarks=true,bookmarksopen=true,%
