--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -1,6 +1,6 @@
 %-------------------------------------------------------------------------
 % Common document formatting and macros for GLFW manuals
-% $Id: glfwdoc.sty,v 1.3 2003-11-04 21:54:17 marcus256 Exp $
+% $Id: glfwdoc.sty,v 1.4 2003-11-04 23:03:28 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Misc. document info
@@ -71,4 +71,4 @@
 
 % hyperref (bookmarks, links etc) - use this package last
 \usepackage[colorlinks=true,linkcolor=black,bookmarks=true,bookmarksopen=true,%
-            pdfhighlight=/N,bookmarksnumbered=true]{hyperref}
+            pdfhighlight=/N,bookmarksnumbered=true,pdfview=FitH,pdfstartview=FitH]{hyperref}
