--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -1,6 +1,6 @@
 %-------------------------------------------------------------------------
 % Common document formatting and macros for GLFW manuals
-% $Id: glfwdoc.sty,v 1.4 2003-11-04 23:03:28 marcus256 Exp $
+% $Id: glfwdoc.sty,v 1.5 2003-11-07 08:45:20 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Misc. document info
@@ -14,6 +14,7 @@
 \usepackage{color}
 \usepackage[overload]{textcase}
 \usepackage{needspace}
+\usepackage{times}
 
 % Logo macros
 \newcommand{\OpenGL}[1][0]{\textbf{OpenGL}\texttrademark}
@@ -45,11 +46,11 @@
 % Titlepage
 \newcommand{\glfwmaketitle}{\begin{titlepage}\ \\%
                             \begin{center}%
-                            \vspace{7.0cm}\Huge\textbf{GLFW}\\%
+                            \vspace{7.0cm}{\Huge\textbf{GLFW}}\\%
                             \rule{10.0cm}{0.5pt}\\%
-                            \vspace{0.5cm}\LARGE\textbf{\glfwdoctype}\\%
-                            \vspace{0.8cm}\large\textbf{API version \glfwapiver}\\%
-                            \normalsize\textit{\today}\\%
+                            \vspace{0.5cm}{\LARGE\textbf{\glfwdoctype}}\\%
+                            \vspace{0.8cm}{\large\textbf{API version \glfwapiver}}\\%
+                            \textit{\today}\\%
                             \vspace{1.5cm}\textbf{\textcopyright2002-2003 Marcus Geelnard}\\%
                             \end{center}\end{titlepage}\newpage}
 
